k8s/postgres-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-test
spec:
  selector:
    app: postgres-test
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
